# autonomoustangobot

./: Videos.md  Videos.txt
Source/autonomoustangobot/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Source/autonomoustangobot/app/src/main/: AndroidManifest.xml
Source/autonomoustangobot/app/src/main/assets/: fragment_shader_points.glsl  fs_linestrip.glsl  vertex_shader_points.glsl  vs_linestrip.glsl
Source/autonomoustangobot/app/src/main/cpp/octomap/: README.md
Source/autonomoustangobot/app/src/main/cpp/octomap/src/: AbstractOcTree.cpp  AbstractOccupancyOcTree.cpp  CMakeLists.txt  OcTree.cpp  Pointcloud.cpp  binvox2bt.cpp  compare_octrees.cpp  (+7 more)
Source/autonomoustangobot/app/src/main/cpp/octomapcustomization/: AStar.h  AStarDataStructures.h  NavigationNode.cpp  NavigationNode.h  NavigationOcTree.cpp  NavigationOcTree.h
Source/autonomoustangobot/app/src/main/cpp/octomapjni/: GeometryHelper.h  NativeObjectHelper.cpp  NativeObjectHelper.h  OcTreeJNI.cpp  PointCloudHelperJNI.cpp
Source/autonomoustangobot/app/src/main/cpp/ringbuffer3DExperimental/: RingBuffer3D.cpp  RingBuffer3D.h  RingBuffer3DJNI.cpp
Source/autonomoustangobot/app/src/main/res/layout/: activity_exploration.xml  activity_exploration_viewer.xml  activity_load_exploration.xml  activity_main.xml  activity_new_exploration.xml  content_main.xml  list_element_file.xml
Source/autonomoustangobot/app/src/main/res/menu/: menu_main.xml
Source/autonomoustangobot/app/src/main/res/raw/: ic_launcher_orig.xcf
Source/autonomoustangobot/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
Source/autonomoustangobot/app/src/main/res/xml/: pref_botproperties.xml  pref_general.xml  pref_headers.xml  pref_octomap.xml  pref_tango.xml
(+41 files in other folders)
